[project]
name = "neonatal-management"
version = "0.1.0"
description = "Neonatal care management application"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    "psycopg[binary]>=3.1.0",
    "Werkzeug>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "html/*"]
